--- a/Backjoon/.project
+++ b/Backjoon/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>kakao_15956</name>
+	<name>Backjoon</name>
 	<comment></comment>
 	<projects>
 	</projects>
